# pihole-api

./: Cargo.toml  README.md  rustfmt.toml
.circleci/: config.yml
debian/: changelog  control
docker/aarch64/: Dockerfile
docker/arm/: Dockerfile
docker/armhf/: Dockerfile
docker/x86_32/: Dockerfile
docker/x86_64-musl/: Dockerfile
rpm/: pihole-api.spec
src/: lib.rs  main.rs  setup.rs  testing.rs  util.rs
src/cli/: args.rs  dnsmasq.rs  handler.rs
src/databases/: common.rs  custom_connection.rs  mod.rs
src/databases/ftl/: model.rs  testing.rs
src/databases/gravity/: model.rs  testing.rs
src/env/: env_impl.rs  file.rs  mod.rs
src/env/config/: file_locations.rs  general.rs  mod.rs  root_config.rs  web.rs
src/ftl/: lock_thread.rs  mod.rs  shared_lock.rs  shared_memory.rs  socket.rs
src/ftl/memory_model/: client.rs  counters.rs  domain.rs  lock.rs  mod.rs  over_time.rs  query.rs  settings.rs  strings.rs  upstream.rs
src/routes/: auth.rs  version.rs  web.rs
src/routes/dns/: add_list.rs  common.rs  delete_list.rs  get_list.rs  mod.rs  status.rs
src/routes/settings/: common.rs  dhcp.rs  dns.rs  ftl.rs  ftldb.rs  get_ftl.rs  mod.rs  network.rs  web.rs
src/routes/stats/: clients.rs  common.rs  mod.rs  over_time_clients.rs  over_time_history.rs  query_types.rs  recent_blocked.rs  summary.rs  top_clients.rs  top_domains.rs  upstreams.rs
src/services/: mod.rs
src/services/domain_audit/: repository.rs
src/services/lists/: list.rs  repository.rs  service.rs
src/settings/: dnsmasq.rs  entries.rs  mod.rs  privacy_level.rs  value_type.rs
(+28 files in other folders)
