[package]
name = "pihole_api"
version = "0.1.0"
authors = ["Mark Drobnak <mark.drobnak@gmail.com>"]
description = "An HTTP API for Pi-hole"
homepage = "https://pi-hole.net"
repository = "https://github.com/AzureMarker/pihole-api"
readme = "README.md"
license = "EUPL-1.2"
publish = false
edition = "2018"

[profile.release]
lto = true

[dependencies]
diesel = { version = "1.4", features = ["sqlite"] }
rocket = { version = "0.5.0-rc.1", features = ["secrets", "json"] }
rocket_sync_db_pools = { version = "0.1.0-rc.1", features = ["diesel_sqlite_pool"] }
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors.git", default-features = false }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
rmp = "0.8"
regex = "1.2.1"
rust-embed = "5.9"
toml = "0.5"
failure = "0.1.1"
failure_derive = "0.1.1"
hostname = "0.3"
tempfile = "3.1.0"
get_if_addrs = "0.5.3"
shmem = "0.2.0"
libc = "0.2.60"
nix = "0.21"
base64 = "0.13"
task_scheduler = "0.2.0"
structopt = "0.3"
shaku = "0.6"
shaku_rocket = "0.7.0-rc.1"

# Statically link SQLite (use the crate version provided by Diesel)
# The highest version which Diesel currently allows is 0.22.0
libsqlite3-sys = { version = "0.22", features = ["bundled"] }

[dev-dependencies]
serde_json = "1.0"
lazy_static = "1.3.0"
mockall = "0.9"
